--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -109,6 +109,8 @@ Sub b=new Sub)();		//子类
    Super e=new Sub();
   ~~~
 
+​	**能做什么看左边，具体做什么看右边**
+
 ​	1、父类中有而子类没有的方法，使用父类
 
 ​	2、父类和子类都有该方法时，使用子类重写的方法
