--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -81,13 +81,12 @@ Super s=new Super();	//父类
 Sub b=new Sub)();		//子类
 ```
 
-采用就近原则
+- 采用**就近原则**
+- 创建的对象是子类时，父类和子类都有这个方法时，就用子类的方法
 
-创建的对象是子类时，父类和子类都有这个方法时，就用子类的方法
+- 创建的对象是子类时，父类有该方法，子类没有，调用父类的方法
 
-创建的对象是子类时，父类有该方法，子类没有，调用父类的方法
-
-创建的对象是父类时，只能使用父类的方法
+- 创建的对象是父类时，只能使用父类的方法
 
 
 
@@ -97,9 +96,12 @@ Sub b=new Sub)();		//子类
 
   > 简单地说就是：父类的引用指向了子类对象，接口的引用指向了其接口的实现类对象
   >
-  > 前提条件：必须存在继承或实现关系
+  > - 一个行为，在不同条件下，有不同的执行效果
+  > - 在定义方法的时候，我们可以把参数类型定义的更为抽象一些，这样它就能接受所有的自类型实例，以此来提高程序的兼容性
   >
-  > 表现：重写是父类与子类之间多态性的一种表现，重载是一类中多态性的表现
+  > - 前提条件：必须存在继承或实现关系
+  >
+  > - 表现：重写是父类与子类之间多态性的一种表现，重载是一类中多态性的表现
 
 
 
@@ -109,11 +111,9 @@ Sub b=new Sub)();		//子类
    Super e=new Sub();
   ~~~
 
-​	**能做什么看左边，具体做什么看右边**
-
-​	1、父类中有而子类没有的方法，使用父类
-
-​	2、父类和子类都有该方法时，使用子类重写的方法
+- **能做什么看左边，具体做什么看右边**
+  - 父类中有而子类没有的方法，使用父类
+  - 父类和子类都有该方法时，使用子类重写的方法
 
 
 
@@ -175,6 +175,60 @@ StudentManager	--管家婆：定为属于高层管理，主要负责安排和协
 StudentContainer、Console	--控制台、数据容器：中层管理，提供特定的服务、数据，这两者都直接与管家婆对接
 
 自我感觉：精益求精，先列出StudentManager列出大概步骤，再通过下层实现具体方法
+
+
+
+## 6、类型准换
+
+- 主要分为向上（自动）和向下转型（需要在变量前面加以类型修饰）
+
+  ~~~java
+  Sub a=new Sub();
+  Super s=a;
+  
+  Super a=new Super();
+  Sub b=(Sub)a;
+  ~~~
+
+  
+
+- 对于基本类型而言，比如数字，可以把长度小的类型自动转换成长度大的，相反，长度大的也可以强制类型转化为长度小的
+
+  ~~~java
+  byte(1字节)->short(2字节)->int(4字节)->long(8字节)->float(4字节)->double(8字节)
+      	^
+      	|
+         char(2字节)
+  ~~~
+
+  
+
+- 当把子类型转换为父类型的时候，这个实例的行为会变成它只能调用父类型声明的那些方法（能做什么看左边的类型，具体怎么做，看右边是什么样的实例）
+
+  - 用法类似如多态
+
+  
+
+- 变量名 instanceof 类型：前者是后者这个类型的一个实例吗？
+
+~~~java
+Super n=new Sub();
+ n instanceof Sub	结果：true
+~~~
+
+
+
+## 7、如何比较对象
+
+- 如何比较对象
+  - ==用来比较两者的地址(引用)，基本类型直接比较值
+  - 我们如果要实现"当这个对象中某些个属性值相等，我们就认为这是两个相同的对象"，可以使用equals
+  - 重写Object的equals方法（默认比较的是地址）
+  - 比如用户在注册论坛的时候，我们可以在后台的User中，增加手机号码 + 性别 + 用户名
+
+
+
+
 
 
 
