--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -53,10 +53,10 @@
 
 7.
 
-| 情况 | 父类 | 子类 | 输出情况   |
-| ---- | ---- | ---- | ---------- |
-| 无参 | ✔    | ✔    | 综合上述   |
-| 有参 | ✔    | ✔    | 视情况而定 |
+| 情况 | 父类 | 子类 | 输出情况         |
+| ---- | ---- | ---- | ---------------- |
+| 无参 | ✔    | ✔    | 综合上述         |
+| 有参 | ✔    | ✔    | 视使用情况而输出 |
 
 
 
@@ -225,6 +225,64 @@ Super n=new Sub();
   - 我们如果要实现"当这个对象中某些个属性值相等，我们就认为这是两个相同的对象"，可以使用equals
   - 重写Object的equals方法（默认比较的是地址）
   - 比如用户在注册论坛的时候，我们可以在后台的User中，增加手机号码 + 性别 + 用户名
+
+
+
+## 8、静态修饰符(static)的使用	
+
+- static修饰的变量，它不依赖类的实例而存在，一般直接通过类名进行调用，它是这个类的实例所有共有的（它只有一份）
+- 静态方法只能引用静态变量和静态方法
+- **static一般都"只执行一次"或者"只有一份"**
+
+
+
+
+
+
+
+
+
+# 问题收纳
+
+## 1、如何理解类和对象
+
+- 定义：类是关于一系列相似对象的概括描述，描述它们共有的状态、行为，通过这种共性的定义，我们可以重构出许许多多类似的对象。
+
+​		而对象，即是根据上述类的定义，“克隆”产生的相关实例，这些实例往往在某些属性或行为上是类似但有细节不同的，比如都有姓名，但具体的名字不同。
+
+- 组成类大体包含两种要素，我们统称为成员：
+  - 成员变量：体现为属性、状态、数据
+  - 成员方法：体现为函数或方法，或者做某件事情的能力
+
+- 关系：类与对象之间的关系：当我们依照类A创建了a1实例的时候，我们可以说 a1 is a member of A
+
+
+
+## 2、如何理解封装和抽象
+
+- 封装（动词），既可以用于封装类型，也可以用于封装方法。
+
+- 在封装类型的时候，即是把这个类型的2要素（成员变量和方法）包装到一个单元（class 文件）里面
+
+- 在封装方法的时候，即是把专注做“某件事情”（执行某一个特定算法）的代码段用方法体包含起来
+
+- 在封装的时候，要用“抽象”这种思维能力，做到关注主要的（所有实例共有的），忽略次要的（特别的，只有某些特殊实例才具备的）。
+
+- 抽象还体现在，当我们使用一个类型的实例的时候，在调用其方法时，只需要关注有哪些入参，可以得到什么返回，而无需关注内部的具体实现方式或细节
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
