--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -236,6 +236,14 @@ Super n=new Sub();
 
 
 
+## 9、final修饰符
+
+- 被final修饰的变量，具有"不可改变"的特性，可以在构造器中进行第一次赋值初始化
+- 修饰基本类型：其值不可以再进行修改
+- 修饰引用类型：可以改 - 地址没有变
+- 修饰类：这是这个类的最终版，不能被扩展和继承
+- 修饰方法：这是这个方法的最终版，不能被重写
+
 
 
 
