--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -258,6 +258,15 @@ Super n=new Sub();
 
 
 
+## 10、final、static、abstract的共存
+
+- final、abstract 不能共存（无论在类、方法、属性、局部变量上都不能共存）
+- static、abstract 不能共存（无论在类、方法、属性、局部变量上都不能共存）
+- final static field：定义的那个对象既要它是静态的，也要求它的值不能再被修改。
+- final static method：该类成员方法不能被 override（重写）
+
+
+
 
 
 
