--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -18,10 +18,10 @@
 
 3.
 
-| 情况 | 父类 | 子类 | 输出情况 |
-| ---- | ---- | ---- | -------- |
-| 无参 |      | ✔    | 报错     |
-| 有参 | ✔    |      |          |
+| 情况 | 父类 | 子类 | 输出情况                                   |
+| ---- | ---- | ---- | ------------------------------------------ |
+| 无参 |      | ✔    | 报错                                       |
+| 有参 | ✔    |      | 改错方式：必须有父类无参，才能创建子类无参 |
 
 4.
 
@@ -78,14 +78,13 @@
 
 ```java
 Super s=new Super();	//父类
-Sub b=new Sub)();		//子类
+Sub b=new Sub();		//子类
 ```
 
 - 采用**就近原则**
+- 注意：父类的静态方法不能被子类重写，只可以继承，即使子类中的静态方法与父类中的静态方法完全一样，也是两个完全不同的方法
 - 创建的对象是子类时，父类和子类都有这个方法时，就用子类的方法
-
 - 创建的对象是子类时，父类有该方法，子类没有，调用父类的方法
-
 - 创建的对象是父类时，只能使用父类的方法
 
 
