--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -18,10 +18,24 @@
 
 3.
 
-| 情况 | 父类 | 子类 | 输出情况                                   |
-| ---- | ---- | ---- | ------------------------------------------ |
-| 无参 |      | ✔    | 报错                                       |
-| 有参 | ✔    |      | 改错方式：必须有父类无参，才能创建子类无参 |
+| 情况 | 父类 | 子类 | 输出情况                  |
+| ---- | ---- | ---- | ------------------------- |
+| 无参 |      | ✔    | 报错                      |
+| 有参 | ✔    |      | 改错方式：1、创建父类无参 |
+
+~~~java
+改错方式2、在子类无参构造里面使用父类有参
+    class Super{
+        public Super(int i){}
+    }
+    class Sub extends Super{
+        public Sub(){
+            super(10);
+        }
+    }
+~~~
+
+
 
 4.
 
