更新笔记等

--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -18,10 +18,24 @@
 
 3.
 
-| 情况 | 父类 | 子类 | 输出情况                                   |
-| ---- | ---- | ---- | ------------------------------------------ |
-| 无参 |      | ✔    | 报错                                       |
-| 有参 | ✔    |      | 改错方式：必须有父类无参，才能创建子类无参 |
+| 情况 | 父类 | 子类 | 输出情况                  |
+| ---- | ---- | ---- | ------------------------- |
+| 无参 |      | ✔    | 报错                      |
+| 有参 | ✔    |      | 改错方式：1、创建父类无参 |
+
+~~~java
+改错方式2、在子类无参构造里面使用父类有参
+    class Super{
+        public Super(int i){}
+    }
+    class Sub extends Super{
+        public Sub(){
+            super(10);
+        }
+    }
+~~~
+
+
 
 4.
 
@@ -182,9 +196,10 @@ StudentContainer、Console	--控制台、数据容器：中层管理，提供特
 - 主要分为向上（自动）和向下转型（需要在变量前面加以类型修饰）
 
   ~~~java
+  //子类转父类(向上转型)
   Sub a=new Sub();
   Super s=a;
-  
+  //父类转子类(向下转型)
   Super a=new Super();
   Sub b=(Sub)a;
   ~~~
@@ -227,29 +242,37 @@ Super n=new Sub();
 
 
 
-## 8、静态修饰符(static)的使用	
+## 8、static修饰符的使用	
 
-- static修饰的变量，它不依赖类的实例而存在，一般直接通过类名进行调用，它是这个类的实例所有共有的（它只有一份）
-- 静态方法只能引用静态变量和静态方法
+- 修饰变量：static修饰的变量不依赖类的实例而存在，一般直接通过类名进行调用，它是这个类的实例所有共有的（它只有一份）
+
+  ~~~java
+  如：public static int a=5；
+  
+  会在内存中只开辟一个空间，表名这是一个全局变量，不会再创建新的空间，static修饰的int等类型的值是可以改变的。
+  ~~~
+
+- 修饰方法：静态方法只能引用静态变量和静态方法
+
 - **static一般都"只执行一次"或者"只有一份"**
 
+- 静态代码块：只执行一次，并且时间点在构造器之前，在静态属性初始化之后
 
 
-## 9、final修饰符
 
-- 被final修饰的变量，具有"不可改变"的特性，可以在构造器中进行第一次赋值初始化
+## 9、final修饰符的使用
+
+- 被final修饰的变量，具有"不可改变"的特性，可以在构造器中进行第一次**赋值初始化**,**必须对每个构造器(无参和有参)里面进行同样的赋值操作**
 
 - 修饰基本类型：其值不可以再进行修改
 
-- 修饰引用类型：可以改 - 地址没有变
+- 修饰引用类型：可以改 - 地址没有变（但凡是new了，地址一定改变了，如果通过setter进行修改，地址没有改变）
 
   ~~~java
   MyClass m=new MyClass();
   m=new Myclass;
-  报错
+  结果：报错
   ~~~
-
-  
 
 - 修饰类：这是这个类的最终版，不能被扩展和继承
 
@@ -257,12 +280,83 @@ Super n=new Sub();
 
 
 
-## 10、final、static、abstract的共存
+## 10、abstract修饰符的使用
+
+- 修饰类：对于abstract方法，只允许声明，不允许实现（没有方法体）
+
+  - 类里面可以有抽象的方法，也可以没有抽象方法（情况较少）
+
+  - 类里面有抽象方法，它就一定是抽象类
+
+  - 从用法上，主要是用来被继承的，它的子类必须要实现父类中的抽象方法，否则它自己也必须声明为abstract class
+
+- 修饰方法： 会使这个方法变成抽象方法，也就是只有声明（定义）而没有实现，实现部分以”；”代替。需要子类继承实现（覆盖）
+- 抽象类是可以继承普通类
+
+
+
+## 11、final、static、abstract的共存
 
 - final、abstract 不能共存（无论在类、方法、属性、局部变量上都不能共存）
+  - 原因1:修饰类：final类表示完美不需要继承重写，abstract类表示要子类继承。
+  - 原因2:修饰方法时：final表示完美不需要重写，只能子类继承使用，而abstract中的方法没有东西，所以并不完美。以上两点都是冲突的。故不成立。
 - static、abstract 不能共存（无论在类、方法、属性、局部变量上都不能共存）
-- final static field：定义的那个对象既要它是静态的，也要求它的值不能再被修改。
+- final static field：定义的对象既要它是静态的，也要求它的值不能再被修改。
 - final static method：该类成员方法不能被 override（重写）
+
+
+
+## 12、接口
+
+- 接口：主要是用来封装一揽子抽象方法的，它侧重在于对行为的一种抽象（动词）
+- 接口可以看作一个特殊的抽象类，但是两个是不同的概念，类描述对象的属性和方法，接口则包含类要实现的方法。
+- 接口的实现类必须实现接口中的所有方法，只要有一个没有实现，这个类本身必须声明为abstract class
+- 接口也可以定义属性，但是它默认是public final static
+- 接口中不能有具体的方法实现，它只是一种行为的规约（规范和约定）
+- JDK8 新特性：接口中其实可以定义具体方法（默认方法，可以定义多个），前面必须加default修饰
+- 接口和其他类型之间的关系：
+  - 接口和实现类之间的是implements
+  - 接口和接口之间是extends
+
+
+
+## 13、接口内默认修饰符
+
+```java
+public interface Wifi {
+// public abstract class Wifi {
+    // 不是某某实例的成员变量，而是大家共有
+    // 它并没有属于某一个实例特有、专有的属性
+    // 默认修饰符为public final static
+    public final static int frequency = 100;
+
+    // 没有发放具体实现
+    // 方法不需要abstract修饰
+    // 默认修饰符为public abstract
+    public abstract void connect();
+
+}
+```
+
+
+
+## 14、接口和抽象类的区别
+
+1、接口和抽象类的概念是不一样的。**接口是对动作的抽象，表示的是这个对象能做什么**，比如人可以吃东西、狗也可以吃东西，只要有相同的行为；**抽象类是对根源的抽象，表示的是这个对象是什么**，比如男人是人、女人也是人
+
+2、**可以实现多个接口，只能继承一个抽象类**
+
+3、接口中只能定义抽象方法，抽象类中可以有普通方法（第10个总结最后一点可以继承普通类的原因）
+
+4、接口中只能有静态的不能被改变的数据成员，抽象类可以有普通的数据成员
+
+
+
+
+
+
+
+
 
 
 
