更新笔记和答题

--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -308,15 +308,43 @@ Super n=new Sub();
 
 ## 12、接口
 
+> 定义
+
 - 接口：主要是用来封装一揽子抽象方法的，它侧重在于对行为的一种抽象（动词）
-- 接口可以看作一个特殊的抽象类，但是两个是不同的概念，类描述对象的属性和方法，接口则包含类要实现的方法。
-- 接口的实现类必须实现接口中的所有方法，只要有一个没有实现，这个类本身必须声明为abstract class
-- 接口也可以定义属性，但是它默认是public final static
+
+- 接口可以看作一个特殊的抽象类，但是两个是不同的概念，类描述对象的属性和方法，接口则包含类要实现的方法。\
+
 - 接口中不能有具体的方法实现，它只是一种行为的规约（规范和约定）
+
+> 语法特点
+
+- 接口的实现类必须实现接口中的所有方法，只要有一个没有实现，这个类本身必须声明为abstract class
+
+- 接口定义属性，默认是public final static，并且要对其初始化
+
+- 接口定义方法，默认是public abstract
+
 - JDK8 新特性：接口中其实可以定义具体方法（默认方法，可以定义多个），前面必须加default修饰
+
 - 接口和其他类型之间的关系：
-  - 接口和实现类之间的是implements
+  - 接口和实现类之间的是implements，可以实现多个接口
   - 接口和接口之间是extends
+
+> 作用
+
+- 主要是为了解耦
+
+~~~java
+
+
+~~~
+
+- 形成多态
+
+~~~java
+~~~
+
+
 
 
 
@@ -326,17 +354,16 @@ Super n=new Sub();
 public interface Wifi {
 // public abstract class Wifi {
     // 不是某某实例的成员变量，而是大家共有
-    // 它并没有属于某一个实例特有、专有的属性
     // 默认修饰符为public final static
     public final static int frequency = 100;
 
-    // 没有发放具体实现
-    // 方法不需要abstract修饰
     // 默认修饰符为public abstract
     public abstract void connect();
 
 }
 ```
+
+- 子类重写父类方法时，方法的访问权限不能小于原访问权限，**在接口中，方法的默认权限就是public，所以子类重写后只能是public**
 
 
 
@@ -346,17 +373,18 @@ public interface Wifi {
 
 2、**可以实现多个接口，只能继承一个抽象类**
 
-3、接口中只能定义抽象方法，抽象类中可以有普通方法（第10个总结最后一点可以继承普通类的原因）
+3、接口中只能定义抽象方法（除default方法），抽象类中可以有普通方法（第10个总结最后一点可以继承普通类的原因）
 
 4、接口中只能有静态的不能被改变的数据成员，抽象类可以有普通的数据成员
 
 
 
+## 15、抽象类实现接口，子类继承抽象类的关系
 
+- 一个类实现一个接口，则该类必须实现该接口中的所有方法
+- 一个抽象类实现一个接口，然后该**抽象类可以在该接口中实现任意数量的方法**
 
-
-
-
+- （作业4第二题）一个类继承一个抽象类，这个抽象类实现一个接口，然后在这个子类中，**必须实现抽象类中未实现的接口方法和抽象的修改后的抽象方法**. 至于已经实现的接口方法或非抽象方法，可以重新实现或不实现
 
 
 
