--- a/Project/经验总结.md
+++ b/Project/经验总结.md
@@ -335,16 +335,17 @@ Super n=new Sub();
 - 主要是为了解耦
 
 ~~~java
-
-
+new User("Jack").eat();
+new Animal("Pony").eat();
 ~~~
 
 - 形成多态
 
 ~~~java
+void run(IEat eat)
 ~~~
 
-
+- 接口最终形成了一种跨界类型
 
 
 
