--- a/Project/作业答题.md
+++ b/Project/作业答题.md
@@ -27,9 +27,9 @@
 
 - 10
 
-  - Worker.class
+  Worker.class
 
-  ```java
+  ~~~java
   package com.zouzhao;
   
   public class Worker {
@@ -75,7 +75,7 @@
 
 - 11 
 
-  - Address.class
+  Address.class
 
   ```java
   package com.zouzhao;
@@ -1020,7 +1020,6 @@ public class CalcuPrimerNumberImpl implements CalcuPrimeNumber {
 
 }
 ~~~
-
 
 
 
