更新作业和目录

--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -389,6 +389,559 @@ public interface Wifi {
 
 
 
+## 16、重写equals和hashcode的原因
+
+- 没有重写hashCode方法，那么对象调用hashCode方法是根据对象的地址值来生成的哈希值,两个对象内容相同,哈希值不同
+- 重写了hashCode方法，那么对象调用hashCode方法是根据对象的内容来生成的哈希值,两个对象内容相同,则哈希值一定相同,两个对象哈希值相同,内容不一定相同
+- **重写hashcode是为了保证两个对象内容相等（equals）时哈希表key唯一的原则**
+- **实际上重写了hashcode的两个对象的内存地址还是不相同的**
+
+- 自定义的类重写
+
+  - 如果自定义的类重写了hashCode方法,两个对象内容相同,则哈希值一定相同. 
+
+  - 如果自定义的类重写了hashCode方法,两个对象的哈希值相同,则两个对象的内容一定相同. 有可能产生哈希碰撞
+
+
+
+## 17、ArrayList与LinkedList
+
+- ArrayList
+  - 基于数组实现的，具备了数组所有的优点
+  - 动态扩容
+  - 随机查找（给定一个下标查找）快，插入删除慢
+
+- LinkedList
+  - 基于Node（节点）来实现的虚拟容器（没有具体的边界），每一个节点都会从"前"和"后"两个方向记住临近节点的信息
+  - 理解双链表的操作
+  - 随机访问慢，插入、删除快
+
+- 个人实现LinkedList代码（单向和双向）
+
+  - 单向实现（只有next，没有pre）
+
+    ~~~java
+    package com.zouzhao.linklist;
+    
+    import java.util.Stack;
+    
+    public class SingleLinkedListDemo {
+        public static void main(String[] args) {
+            HeroNode node1 = new HeroNode(1,"宋江","及时雨");
+            HeroNode node2=new HeroNode(2,"林冲","豹子头");
+            HeroNode node3 = new HeroNode(3, "李逵", "黑旋风");
+            HeroNode node4=new HeroNode(4,"123","456");
+    
+            SingleLinkedList singleLinkedList = new SingleLinkedList();
+            /*singleLinkedList.addHeroNode(node1);
+            singleLinkedList.addHeroNode(node2);
+            singleLinkedList.addHeroNode(node3);
+            singleLinkedList.addHeroNode(node4);
+    */
+    
+            //有序添加
+            singleLinkedList.add2(node2);
+            singleLinkedList.add2(node4);
+            singleLinkedList.add2(node1);
+            singleLinkedList.add2(node3);
+    
+            singleLinkedList.list();
+    
+            //替换，更新
+            System.out.println("替换，更新");
+            HeroNode newNode1=new HeroNode(4,"吴用","智多星");
+            HeroNode newNode2 = new HeroNode(5, "123", "123");
+    
+            singleLinkedList.update(newNode1);
+            singleLinkedList.list();
+    
+            singleLinkedList.update(newNode2);
+            singleLinkedList.list();
+    
+    
+            //删除
+            System.out.println("删除");
+            singleLinkedList.del(2);
+            singleLinkedList.list();
+            System.out.println();
+            singleLinkedList.del(4);
+            singleLinkedList.list();
+            System.out.println();
+            singleLinkedList.del(4);
+            singleLinkedList.list();
+            System.out.println();
+    
+            //得出有效节点
+            System.out.println("有效节点");
+            System.out.println(getLength(singleLinkedList.head));
+    
+            System.out.println("返回链表倒数第k个结点");
+            System.out.println(findLastIndexNode(singleLinkedList.head, -2));
+            System.out.println(findLastIndexNode(singleLinkedList.head, 2));
+    
+            System.out.println("原本的链表");
+            singleLinkedList.list();
+            System.out.println("反转列表");
+            reversetList(singleLinkedList.head);
+            singleLinkedList.list();
+            System.out.println("2次反转列表利用stack");
+           reversetListByStack(singleLinkedList.head);
+            singleLinkedList.list();
+    
+            System.out.println("从尾到头打印");
+            reversePrint(singleLinkedList.head);
+    
+            //复原
+            System.out.println("");
+            System.out.println("复原");
+            /*HeroNode node1 = new HeroNode(1,"宋江","及时雨");
+            HeroNode node2=new HeroNode(2,"林冲","豹子头");
+            HeroNode node3 = new HeroNode(3, "李逵", "黑旋风");
+            HeroNode node4=new HeroNode(4,"123","456");*/
+            HeroNode node5= new HeroNode(5,"宋江","及时雨");
+            HeroNode node6=new HeroNode(6,"林冲","豹子头");
+            HeroNode node7 = new HeroNode(7, "李逵", "黑旋风");
+            HeroNode node8=new HeroNode(8,"123","456");
+            singleLinkedList.add2(node5);
+            singleLinkedList.add2(node6);
+            singleLinkedList.add2(node1);
+            singleLinkedList.add2(node3);
+    
+            SingleLinkedList singleLinkedList2 = new SingleLinkedList();
+            singleLinkedList2.add2(node2);
+            singleLinkedList2.add2(node7);
+            singleLinkedList2.add2(node4);
+            singleLinkedList2.add2(node8);
+    
+            System.out.println("单链表1");
+            singleLinkedList.list();
+            System.out.println("单链表2");
+            singleLinkedList2.list();
+    
+            System.out.println("合并两个有序的单链表，合并之后的链表依然有序【课后练习.】");
+            lindedList1AndLinkedList2(singleLinkedList.head,singleLinkedList2.head);
+            singleLinkedList.list();
+        }
+    
+        /**
+         *
+         * @param head
+         * @return 链表有效节点个数
+         */
+        public static int getLength(HeroNode head){
+            if(head.next==null)return 0;//链表为空
+            HeroNode temp=head.next;
+            int count=0;
+            while(true){
+                if(temp==null)break;
+                else count++;
+                temp=temp.next;
+            }
+            return  count;
+        }
+    
+        /**
+         *
+         * @param head
+         * @param index
+         * @return 返回链表倒数第k个结点
+         */
+        public static HeroNode findLastIndexNode(HeroNode head,int index){
+            //链表为空
+            if(head.next==null) return null;
+    
+            int length=getLength(head);
+            //index必须在取值范围内
+            if(index<=0||index>length)return null;
+    
+            HeroNode temp=head.next;
+            for(int i=0;i<length-index;i++){
+                temp=temp.next;
+            }
+            return temp;
+        }
+    
+        /**
+         *
+         * @param head
+         * 反转链表
+         */
+        public static void reversetList(HeroNode head){
+            //判断链表为空或者只有一个结点，不需要反转
+            if(head.next==null||head.next.next==null) return;
+            //反转
+            HeroNode temp,next,reverseHead;
+            reverseHead=new HeroNode(0,"","");
+            temp=head.next;
+            while(true){
+                if(temp==null)break;
+                next=temp.next;
+                //先连后面再连前面
+                temp.next=reverseHead.next;
+                reverseHead.next=temp;
+    
+                temp=next;
+            }
+            //将结果转移给原链表
+            head.next=reverseHead.next;
+        }
+    
+        /**
+         *
+         * @param head
+         * 反转链表 利用栈
+         */
+        public static void reversetListByStack(HeroNode head){
+            //判断是否为空或者一个结点
+            if(head.next==null||head.next.next==null)return;
+            //反转链表
+            HeroNode reversetListHead=new HeroNode(0,"","");
+            //压栈
+            Stack<HeroNode> nodeStack = new Stack<>();
+            HeroNode temp=head.next;
+    
+            while (true){
+                if(temp==null)break;
+                nodeStack.push(temp);
+                temp=temp.next;
+            }
+            HeroNode uaa=reversetListHead;
+            while(nodeStack.size()>0){
+               HeroNode cur=nodeStack.pop();
+                uaa.next=cur;
+                cur.next=null;
+                uaa=cur;
+            }
+            //转移
+            head.next=reversetListHead.next;
+    
+        }
+    
+        /**
+         *
+         * @param head
+         * 从尾到头打印单链表 利用栈stack
+         */
+        public static void reversePrint(HeroNode head){
+            //判断是否为空或者一个结点
+            if(head.next==null||head.next.next==null)return;
+            //反转链表
+            HeroNode reversetListHead=new HeroNode(0,"","");
+            //压栈
+            Stack<HeroNode> nodeStack = new Stack<>();
+            HeroNode temp=head.next;
+    
+            while (true){
+                if(temp==null)break;
+                nodeStack.push(temp);
+                temp=temp.next;
+            }
+    
+            while(nodeStack.size()>0){
+                HeroNode cur=nodeStack.pop();
+                System.out.println(cur);
+            }
+        }
+    
+        /**
+         * @param head1
+         * @param head2
+         * 合并两个有序的单链表，合并之后的链表依然有序【课后练习.】
+         * 类似如按no大小插入,,t2插入t1
+         */
+        public static void lindedList1AndLinkedList2(HeroNode head1,HeroNode head2 ){
+            if(head1.next==null&&head2==null)return;
+    
+            HeroNode temp2=head2.next;
+            HeroNode temp1=head1;
+            while(true) {
+    
+                if(temp2==null)break;//全部插入完
+    
+                //找到对应的no位置
+                while (true) {
+                    if (temp1.next == null) break;//遍历结束
+                    if (temp2.no < temp1.next.no) break;//
+                    temp1 = temp1.next;
+                }
+    
+                HeroNode next = temp2.next;
+                temp2.next = temp1.next;
+                temp1.next = temp2;
+                temp2=next;
+            }
+    
+        }
+    
+        //定义单个实体,HeroNode
+        static class HeroNode {
+            int no;
+            String name;
+            String nickname;
+            HeroNode next;
+    
+            //构造器
+            public HeroNode(int no,String name,String nickname){
+                this.no=no;
+                this.name=name;
+                this.nickname=nickname;
+            }
+    
+            @Override
+            public String toString() {
+                return "HeroNode{" +
+                        "no=" + no +
+                        ", name='" + name + '\'' +
+                        ", nickname='" + nickname + '\'' +
+                        '}';
+            }
+        }
+    
+        //定义单链表和方法
+        static class SingleLinkedList{
+            private HeroNode head=new HeroNode(0,"","");
+    
+    
+            //添加无顺序排名
+            public void addHeroNode(HeroNode heroNode){
+                HeroNode temp= head;
+                while (true){
+                    if(temp.next==null){
+                        break;
+                    }
+                    temp=temp.next;
+                }
+    
+                temp.next=heroNode;
+            }
+    
+            //添加时按顺序进行添加
+            public void add2(HeroNode heroNode){
+                HeroNode temp=head;
+                boolean flag=false;
+                while(true){
+                    if(temp.next==null)break;//遍历结束
+                    if(heroNode.no<temp.next.no)break;//找到编号位置  1 2 3  *  5
+                    else if(temp.next.no==heroNode.no)  //等于说明编号已存在
+                    {
+                        flag=true;
+                        break;}
+    
+                    temp=temp.next; //后移
+                }
+                if(flag) {
+                    System.out.println("编号已存在，无法进行添加");
+                }
+                else {
+                    heroNode.next=temp.next;
+                    temp.next=heroNode;
+                }
+            }
+    
+            //显示链表
+            public void list(){
+                HeroNode temp=head;
+    
+               while (true){
+                   if(temp.next==null)break; //检查链表后面还有没有数据 //判断链表是否为空
+                   System.out.println(temp.next);
+                   temp=temp.next;
+    
+               }
+            }
+    
+            //根据no修改链表
+            public void update(HeroNode newHeroNode){
+                HeroNode temp=head.next;
+                boolean flag=false;
+                while (true){
+                    //遍历结束
+                    if(temp==null)break;
+                    if(newHeroNode.no== temp.no){
+                        flag=true;
+                       break;
+                    }
+                    temp=temp.next;
+                }
+    
+                if(flag){
+                    temp.name=newHeroNode.name;
+                    temp.nickname=newHeroNode.nickname;
+                    System.out.println("修改成功");
+                }else {
+                    System.out.println("没有找到该编号"+newHeroNode.no);
+                }
+            }
+    
+            //根据no删除
+            public void del(int no){
+                HeroNode temp=head;
+                boolean flag=false;
+                while(true){
+                  if(temp.next==null)break;//遍历结束
+                  if(temp.next.no==no){
+                      flag=true;
+                      break;
+                  }
+                  temp=temp.next;
+                }
+    
+                if(flag){
+                    temp.next=temp.next.next;
+                }else System.out.println("没有该no");
+    
+            }
+    
+    
+    
+        }
+    }
+    
+    ~~~
+
+- - 双向实现（有pre和next）
+
+~~~java
+package com.zouzhao.linklist;
+
+public class DoubleLinkedListDemo {
+    public static void main(String[] args) {
+
+    }
+
+
+    //定义单个实体,HeroNode2
+    static class HeroNode2 {
+        int no;
+        String name;
+        String nickname;
+        HeroNode2 next;
+        HeroNode2 pre;
+
+        //构造器
+        public HeroNode2(int no,String name,String nickname){
+            this.no=no;
+            this.name=name;
+            this.nickname=nickname;
+        }
+
+        @Override
+        public String toString() {
+            return "HeroNode2{" +
+                    "no=" + no +
+                    ", name='" + name + '\'' +
+                    ", nickname='" + nickname + '\'' +
+                    '}';
+        }
+    }
+
+
+    class DoubleLinkedList{
+        private HeroNode2 head=new HeroNode2(0,"","");
+
+
+        //显示遍历链表
+        public void list(){
+            HeroNode2 temp=head;
+
+            while (true){
+                if(temp.next==null)break; //检查链表后面还有没有数据 //判断链表是否为空
+                System.out.println(temp.next);
+                temp=temp.next;
+
+            }
+        }
+        
+        //添加结点到链表末尾
+        public void addHeroNode(HeroNode2 heroNode){
+            HeroNode2 temp= head;
+            while (true){
+                if(temp.next==null){
+                    break;
+                }
+                temp=temp.next;
+            }
+            //双向链表
+            temp.next=heroNode;
+            heroNode.pre=temp;
+        }
+
+        //根据no修改链表
+        public void update(HeroNode2 newHeroNode){
+            HeroNode2 temp=head.next;
+            boolean flag=false;
+            while (true){
+                //遍历结束
+                if(temp==null)break;
+                if(newHeroNode.no== temp.no){
+                    flag=true;
+                    break;
+                }
+                temp=temp.next;
+            }
+
+            if(flag){
+                temp.name=newHeroNode.name;
+                temp.nickname=newHeroNode.nickname;
+                System.out.println("修改成功");
+            }else {
+                System.out.println("没有找到该编号"+newHeroNode.no);
+            }
+        }
+
+        //根据no删除
+        public void del(int no){
+
+            if(head.next==null){
+                System.out.println("链表为空，无法删除");
+            }
+            HeroNode2 temp=head.next;
+            boolean flag=false;
+            while(true){
+                if(temp==null)break;//遍历结束
+                if(temp.no==no){
+                    flag=true;
+                    break;
+                }
+                temp=temp.next;
+            }
+
+            if(flag){
+                temp.pre.next=temp.next;
+                //如果为最后一个结点，就会出现空指针,要加一个判断是否为最后一个结点
+                if(temp.next!=null){
+                temp.next.pre=temp.pre;}
+
+            }else System.out.println("没有该no");
+
+        }
+        
+        
+    }
+
+
+}
+~~~
+
+
+
+## 18、HashMap和HaspSet
+
+- Map
+  - 基于键值对(key-value)的数据结构
+  - key不能重复的，value可以重复
+  - 元素的排列顺序无法得到保障的
+
+- Set
+  - 没有顺序
+  - 没有下标
+  - 元素不可以重复
+  - 类似于一个大麻袋，里面只能装不重复的元素
+
+
+
+
+
 
 
 
