--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -389,18 +389,20 @@ public interface Wifi {
 
 
 
-## 16、重写equals和hashcode的原因
+## 16、重写equals和hashCode的原因
 
-- 没有重写hashCode方法，那么对象调用hashCode方法是根据对象的地址值来生成的哈希值,两个对象内容相同,哈希值不同
-- 重写了hashCode方法，那么对象调用hashCode方法是根据对象的内容来生成的哈希值,两个对象内容相同,则哈希值一定相同,两个对象哈希值相同,内容不一定相同
+- 没有重写hashCode方法，重写了equals，那么对象调用hashCode方法是根据对象的地址值来生成的哈希值,两个对象内容一定相同,哈希值不一定不同
+
+- 重写了hashCode方法，没有重写equals，那么对象调用hashCode方法是根据对象的内容来生成的哈希值，两个对象哈希值相同,内容不一定相同
+
+- 重写了equals和hashCode,两个对象内容相同,则哈希值一定相同,
+
 - **重写hashcode是为了保证两个对象内容相等（equals）时哈希表key唯一的原则**
+
 - **实际上重写了hashcode的两个对象的内存地址还是不相同的**
 
-- 自定义的类重写
+  
 
-  - 如果自定义的类重写了hashCode方法,两个对象内容相同,则哈希值一定相同. 
-
-  - 如果自定义的类重写了hashCode方法,两个对象的哈希值相同,则两个对象的内容一定相同. 有可能产生哈希碰撞
 
 
 
@@ -420,7 +422,7 @@ public interface Wifi {
 
   - 单向实现（只有next，没有pre）
 
-    ~~~java
+~~~java
     package com.zouzhao.linklist;
     
     import java.util.Stack;
@@ -797,9 +799,8 @@ public interface Wifi {
         }
     }
     
-    ~~~
-
-- - 双向实现（有pre和next）
+~~~
+  双向实现（有pre和next）
 
 ~~~java
 package com.zouzhao.linklist;
@@ -918,7 +919,6 @@ public class DoubleLinkedListDemo {
         
         
     }
-
 
 }
 ~~~
