更新release/v2.1.0_高级\_集合框架\_20220720分支，20220721上课笔记与个人排序代码,删除live2d看板娘

--- a/Project/总结/经验总结.md
+++ b/Project/总结/经验总结.md
@@ -1,4 +1,6 @@
-# 经验总结
+# experience
+
+# 🎈🎈经验总结
 
 ## 1、子类和父类之间构造方法
 
@@ -931,12 +933,440 @@ public class DoubleLinkedListDemo {
   - 基于键值对(key-value)的数据结构
   - key不能重复的，value可以重复
   - 元素的排列顺序无法得到保障的
+  - **HaspMap及常用方法**
+  
+~~~java
+  		Map<String, Student> map = new HashMap<>();
+		//第一个old
+         Object old = map.put("1b", new Student("Mike", 20));
+         System.out.println(old);	//sout:null
+
+		//1、put，放入key-value
+         map.put("a2", new Student("Jack", 20));
+         map.put("3_", new Student("Cool", 40));
+         map.put("z4", new Student("Mary", 30));
+		
+		//两个old输出的区别,新放入的key没有覆盖返回null，覆盖了返回被覆盖的对象
+         old = map.put("3_", new Student("Tom", 6));		
+         System.out.println(old);	//sout:Student{name='Cool', age=40}
+		
+         System.out.println("---------------");
+
+         //2、keySet，得到所有的key
+         Set<String> keys = map.keySet();
+         for (String key: keys) {
+             Student value = map.get(key);
+             System.out.println(key + "-" + value);
+         }
+
+         //3、values，仅仅只想获取到value
+         Collection<Student> values = map.values();
+         for (Student stu : values) {
+             System.out.println(stu);
+         }
+
+         //4、entrySet，把key和value包装成的这样一个对象叫Entry
+         Set<Map.Entry<String, Student>> entries = map.entrySet();
+         for (Map.Entry entry : entries) {
+             System.out.println(entry.getKey() + ":" + entry.getValue());
+         }
+
+         System.out.println(map.size());
+~~~
+
+  
+
+​    
 
 - Set
   - 没有顺序
+  
   - 没有下标
+  
   - 元素不可以重复
+  
   - 类似于一个大麻袋，里面只能装不重复的元素
+  
+  - **HashSet及常用方法**
+  
+
+~~~java
+	//一、元素去重
+	static String[] duplicatedPlus (String[] arr) {     
+       // 首先把数组转换成Collection
+        List<String> list = Arrays.asList(arr);
+      Set<String> set = new HashSet<>(list);
+    //1、强转   
+    return (String[]) set.toArray();
+    
+        //2、new String[0]其中参数的作用并不是让你给一个空的数组容器，而是告诉它具体数组的类型，让它自己给造一个出来，就是给类型
+       return set.toArray(new String[0]);
+
+        // 编译器会自动的根据后面返回的类型进行推断
+        // 3、整合版
+    return new HashSet<String>(Arrays.asList(arr)).toArray(new String[0]);
+    	
+    //4、Tree的结构会让元素按大小插入，二叉树的结构，返回结果有序
+    return new TreeSet<>(Arrays.asList(arr)).toArray(new String[0]);
+    }
+
+	//二、API、常用
+  static void testAPI() {
+        Set<String> set = new HashSet<>();
+      //1、add，添加
+        set.add("asdf");
+        set.add("123");
+        set.add("qwer");
+        set.add(RandomUtils.randomString());
+        //重复无法插入
+      set.add("123");
+		//2、remove ，移出
+        set.remove("qwer");
+
+        for (String item : set) {
+            System.out.println(item);
+        }
+	//3、contains，set里是否包含XXX
+        System.out.println(set.contains("asdf"));
+    }
+
+~~~
+
+
+
+
+
+
+
+# 🎈🎈课堂笔记
+
+# 1、高级\_集合框架分支2022_07_21
+
+## 1.1 map和set见上面第18点
+
+
+
+## 1.2 工具类Arrays、 Collections
+
+- Arrays
+
+~~~java
+ 	    // 1、拷贝数组
+        Arrays.copyOf()
+        // 2、对目标数组做一个范围拷贝
+       Arrays.copyOfRange()
+        // 3、把数组转换成List集合
+         Arrays.asList(1,2,3);
+
+        int[] arr = {3, 0, -9, 8, 4, 3};
+		//4、 直接在原先的数组上进行排序的，破坏性方法
+        Arrays.sort(arr); 	//排序好后[-9, 0, 3, 3, 4, 8]
+        //5、查找值在arr的位置，如果找到了，返回索引
+		// 如果没有找到，那么把返回(-(point) - 1)
+		//point：这个新元素安排进去的位置 
+        int index = Arrays.binarySearch(arr, 9); // 返回的是目标在排好序的数组中的索引，可以插入6号索引，所以这里返回（-6）-1  ，即-7
+        System.out.println(Arrays.toString(arr));
+        System.out.println(index);
+~~~
+
+
+
+## 1.3 sort()， Comparable让对象可以进行比较
+
+- 第一种方法,让需要比较的类实现comparable（不推荐）
+
+~~~java
+public class Student implements Comparable<Student>{
+    .....省略属性
+        ......省略方法
+  // 决定比较什么属性
+ // 在做A需求的时候，要求根据age比较
+// 在做B需求的时候，要求根据name比较
+// 因为业务的发展，具体的业务逻辑(比较逻辑)侵入到了JavaBean中，这样的代码是不太好维护的
+        
+        //按年龄大小来进行比较
+         @Override
+    public int compareTo(Student o) {
+        return Integer.compare(getAge(), o.getAge());
+    }
+}
+ 
+Main.class
+        List<Student> stuList = new ArrayList<>();
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+
+       Collections.sort(stuList);
+~~~
+
+
+
+- 第二种方法，写实现类
+~~~java
+//按年龄从小到大
+public class AgeComparator implements Comparator<Student> {
+    @Override
+    public int compare(Student o1, Student o2) {
+        return Integer.compare(o1.getAge(), o2.getAge());
+    }
+}
+//按姓名的ACSII从小到大 
+public class NameComparator implements Comparator<Student> {
+    @Override
+    public int compare(Student o1, Student o2) {
+        return o1.getName().compareTo(o2.getName());
+    }
+Main.class
+         List<Student> stuList = new ArrayList<>();
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+        stuList.add(new Student(randomString(),randomNumber(100)));
+
+       Collections.sort(stuList,new AgeComparator());
+~~~
+
+- 比较反转
+
+~~~java
+ // 得到一个作用相反的比较器，顺序反转了
+       Comparator<Student> nameComparator = Collections.reverseOrder(new NameComparator());
+       Collections.sort(stuList,nameComparator);
+~~~
+
+
+
+## 1.4 排序算法
+
+下面几个排序是我自己做题的排序算法，大致与老师相同，因为自己的算法从网上学的，所以实现与老师有些差异，不过中心思想都是一样的,有兴趣可以了解下这些排序，有步骤疑问可以qq私聊我
+
+### 1.4.1 归并排序（今天上课讲的）
+
+~~~java
+package com.zouzhao.sort;
+
+import java.util.Arrays;
+
+public class MergeSort {
+
+    public static void main(String[] args) {
+        int[] n=new int[1000];
+        for (int i = 0; i < n.length; i++) {
+            n[i]=(int)(Math.random()*80000);
+        }
+       System.out.println(Arrays.toString(n));
+		//上面是显示没排序前的数组
+        int[] temp=new int[n.length];
+		//算法入口
+        mergeSort(n,0,n.length-1,temp);
+		//打印排序后的数组
+        System.out.println(Arrays.toString(n));
+    }
+
+    private static void mergeSort(int[] n,int start,int end,int[] temp) {
+        if (start<end) {
+            int mid=(end-start)/2+start;
+            mergeSort(n,start,mid,temp);
+            mergeSort(n,mid+1,end,temp);
+            //合并
+            merge(n, start, end, mid,temp);
+        }
+    }
+
+    private static void merge(int[] n, int start, int end, int mid,int[] temp) {
+        //合并
+        int i= start,j= mid +1;
+        int k=start;
+       while (i<=mid&&j<=end){
+           if (n[i]< n[j]){
+                    temp[k]= n[i];
+                    i++;k++;
+           }else {
+               temp[k] = n[j];
+               j++;k++;
+           }
+        }
+      while (i<=mid){
+          temp[k]= n[i];
+          i++;k++;
+      }
+      while (j<=end){
+          temp[k] = n[j];
+          j++;k++;
+      }
+        System.arraycopy(temp,start,n,start,end-start+1);
+
+    }
+
+
+}
+~~~
+
+
+
+### 1.4.2 冒泡排序
+
+有兴趣可以参考这个排序的flag对其他排序进行改良，
+
+flag在这里意义：如果在一次排序中如果没有发生一次位置的交换，flag就会等于true，说明无需进行后面的循环排序
+
+~~~java
+package com.zouzhao.sort;
+
+import java.util.Arrays;
+
+public class BubbleSort {
+    public static void main(String[] args) {
+        int[] n=new int[5];
+        for (int i = 0; i < ; i++) {
+            n[i]=(int)(Math.random()*80000);
+        }
+        int[] bubble = bubble(n);
+        System.out.println(Arrays.toString(n));
+        System.out.println(Arrays.toString(bubble));
+    }
+
+    private static  int[] bubble(int[] n) {
+        int temp=0;
+        boolean flag=true;
+        for (int i = 0; i < n.length-1; i++) {
+            for (int j = 0; j < n.length-1-i; j++) {
+                if(n[j]> n[j+1]){
+                    flag=false;
+                    temp= n[j];
+                    n[j]= n[j+1];
+                    n[j+1]=temp;
+                }
+            }
+            if(flag){
+                break;
+            }else {
+                flag=true;
+            }
+        }
+        return  n;
+    }
+}
+~~~
+
+
+
+### 1.4.3 选择排序
+
+~~~java
+package com.zouzhao.sort;
+
+import java.util.Arrays;
+
+public class ChoiceSort {
+    public static void main(String[] args) {
+        int[] n=new int[50];
+        for (int i = 0; i < n.length; i++) {
+            n[i]=(int)(Math.random()*80000);
+        }
+        choiceSort(n);
+        System.out.println(Arrays.toString(n));
+
+    }
+    private static void choiceSort(int[] n){
+        for (int i = 0; i < n.length-1; i++) {
+            for (int j = i+1; j < n.length; j++) {
+                if(n[j]<n[i]){
+                    int temp= n[j];
+                    n[j]= n[i];
+                    n[i]=temp;
+                }
+            }
+        }
+
+
+    }
+}
+~~~
+
+
+
+### 1.4.4 插入排序
+
+~~~java
+package com.zouzhao.sort;
+
+import java.util.Arrays;
+
+public class InsertSort {
+    public static void main(String[] args) {
+        int[] n=new int[50];
+        for (int i = 0; i < n.length; i++) {
+            n[i]=(int)(Math.random()*80000);
+        }
+        insertSort(n);
+        System.out.println(Arrays.toString(n));
+    }
+    private static void insertSort(int[] n){
+        for (int i = 0; i < n.length; i++) {
+            for (int j = i; j >0; j--) {
+                if (n[j]<n[j-1]){
+                    int temp= n[j];
+                    n[j]= n[j-1];
+                    n[j-1]=temp;
+                }
+            }
+        }
+    }
+}
+
+~~~
+
+
+
+### 1.4.5 快速排序（速度如其名）
+
+~~~java
+package com.zouzhao.sort;
+
+import java.util.Arrays;
+
+public class QuickSort {
+    public static void main(String[] args) {
+        int[] arr=new int[1000];
+        for (int i = 0; i < arr.length; i++) {
+            arr[i]=(int)(Math.random()*80000);
+        }
+        System.out.println(Arrays.toString(arr));
+        int[] ints = quickSort(arr, 0, arr.length - 1);
+        System.out.println(Arrays.toString(ints));
+    }
+
+    public static int[] quickSort(int[] arr,int left,int right){
+       if(left<right){
+           int partition = partition(arr, left, right);
+            quickSort(arr,left,partition-1);
+            quickSort(arr,partition+1,right);
+       }
+        return arr;
+    }
+
+    public static int partition(int[] arr,int left,int right){
+        int pivot=left;
+        int index=left+1;
+        for (int i = index; i <=right ; i++) {
+            if (arr[i]<arr[pivot]){
+                swap(arr,i,index);
+                index++;
+            }
+        }
+        swap(arr,pivot,index-1);
+        return index-1;
+    }
+    public static void swap(int[] arr,int i,int j){
+        int temp=arr[i];
+        arr[i]=arr[j];
+        arr[j]=temp;
+    }
+}
+~~~
 
 
 
@@ -945,6 +1375,9 @@ public class DoubleLinkedListDemo {
 
 
 
+
+
+# —————分割线—————————
 
 # 问题收纳
 
